added javafx dependency with sample code